turtleart.flower.Flower.scala.error
Erreur de compilation :
Flower:2: error: not found: value bordure
  bordure()
  ^