turtleart.flower.Flower.scala.code
override def run() {
  bordure()
}

def bodure(){
  var i=0
  for (i <- 0 to 7){
    avance(50)
    droite(360.0/8.0)
  }
}